--- a/OpenEXR.cabal
+++ b/OpenEXR.cabal
@@ -27,6 +27,7 @@ library
   c-sources: cbits/half.c
 
   exposed-modules:
+    Graphics.OpenEXR.Half
     Graphics.OpenEXR.Raw
 
   ghc-options: -Wall -fwarn-tabs -O2
